Prevent sending resize event before load complete

SitePerProcessBrowserTest::NoResizeAfterIframeLoad was disabled on
Android when we enabled zoom-factor-for-dsf.
It was failing because when there was zoom factor, there was an extra
layout when setting the page_zoom_factor for the first time.

This CL supressed the UpdateStyleAndLayout on Update zoom factor
if it's the first layout and we don't have the LayoutSize yet.

Bug: 851049
Change-Id: If2b3fc05624c659d5fb83e50a9edf34ab0231e5c
Reviewed-on: https://chromium-review.googlesource.com/c/1409733
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624590}
Former-commit-id: 3d98424ea60f6ca5504d5130af678b0da66b9fa7